          New procedure.
	* gm2/gm2-compiler/M2Quads.mod:  (BuildEndFor) suppress
	  overflow checking in the addition
          of the loop variable.  The explicit for loop check will
          catch an overflow and this addition can overflow for
          unsigned types counting down.
	* gm2/gm2-gcc/m2expr.c:  (BuildAddCheck) corrected
	  comments and strip results.  (BuildSubCheck) corrected
	  comments and strip results.

2018-01-01      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  (CodeAddCheck) New procedure.
          (CodeSubCheck) New procedure.  (CodeBinaryCheck) New procedure.
          Use CodeAddCheck and CodeSubCheck.
	* gm2/gm2-compiler/M2Range.def:  (GetMinMax) exported.
	* gm2/gm2-gcc/m2expr.c:  (BuildAddCheck) New function.
	  (BuildSubCheck) New function.  (checkWholeAddOverflow)
          parameters changed.  (checkWholeSubOverflow)  New function.
          (checkWholeOverflow) updated parameters to include subrange min
	  and max.  (build_binary_op_check)  New function.  (build_binary_op)
          call build_binary_op_check.
	* gm2/gm2-gcc/m2expr.def:  (BuildBinCheckProcedure) New
          definition.  (BuildSubCheck) New procedure function.
	  (BuildAddCheck) New procedure function.
	* gm2/gm2-gcc/m2expr.h:  (BuildAddCheck)  New prototype.
          (BuildSubCheck)  New prototype.
	* gm2/gm2-compiler/M2GenGCC.mod:  pass lowest into binop.
	* gm2/gm2-gcc/m2expr.c:  (BuildAddCheck) extra parameter lowest.
          (BuildSubCheck) extra parameter lowest.  Call build_binary_op
          with extra parameter lowest.  (BuildLessThanZero) New function.
          (BuildGreaterThanZero) New function.  (checkWholeAddOverflow)
          extra parameter and use BuildLessThanZero and
	  BuildGreaterThanZero.    (checkWholeSubOverflow)
          extra parameter and use BuildLessThanZero and
          BuildGreaterThanZero.  (checkWholeOverflow) call
          checkWholeAddOverflow and checkWholeSubOverflow with an extra